# GameOnC

./: .gitignore  CMakeLists.txt  atlas.h  defs.h  game.c  game.h  main.c  map.h  structs.h  test.c  window.c  window.h
game/: dungeon.c  player.c
system/: draw.c  init.c  init.h  input.c  input.h  textures.c  textures.h
